--- a/server/configuration.yml
+++ b/server/configuration.yml
@@ -77,7 +77,7 @@ game:
     - Aïe, non, pas là !
     - Non non, pas ici !
     - Ouch, Tu veux ma mort ?!
-    - Prend ton temps avant de cliquer n'importe où !
+    - Prends ton temps avant de cliquer n'importe où !
     - Eh, tu veux que je te morde ?!
   lost:
     - Hé ho ! Tu t'égares...
@@ -258,9 +258,9 @@ levels:
   - type: experience
     name: "Niveau 3"
     index: "sbsod"
-    title: 'Expérience 2 :<br>Questionnaire'
+    title: 'Expérience 2 :<br>Les cartes et vous'
     presentation:
-      - 'Cette expérience est un simple questionnaire, dans lequel vous
+      - 'Cette expérience est un simple questionnaire dans lequel vous
         devez répondre à quinze questions sur vos habitudes et votre aisance à
         manipuler des cartes.'
       - 'Merci de répondre le plus honnêtement possible,
@@ -457,7 +457,7 @@ levels:
     timelimit: 30
     title: 'Expérience 4 :<br>Rotation en 3D'
     presentation:
-      - 'Retrouver un objet en trois dimensions ayant subit une rotation.'
+      - 'Retrouver un objet en trois dimensions ayant subi une rotation.'
     tutorial:
       text1: 'Voici la rotation d''un solide en trois dimensions :'
       text2: 'Voici un autre solide :'
