added tutorial levels selection menu

--- a/server/configuration.yml
+++ b/server/configuration.yml
@@ -157,49 +157,44 @@ consent:
   - type: paragraph
     content: 'En signant ce formulaire et en continuant le jeu, vous comprenez et acceptez
       de partager ces données avec notre équipe.'
-#############################
-#### TUTORIAL DEFINITION ####
-#############################
-tutorial:
-  start:
-    zoom: 5
-    center: [2.4330433787464445,46.76956073999986]
-  player: [3.5607160720497193,45.504232060218484]
-  target: [3.741964538569108,45.55022042474076]
-  hints:
-    0: À l'ouest de la ville de Lyon
-    6: Entre St-Étienne et Clermont-Ferrand
-    8: Au sud-ouest de la ville d'Ambert
-    10: Entre St-Amant-Roche-Savine et St-Germain-l'Herm
-    11: Au sud-ouest de Fournols
-    13: Au hameau de La Colombière, double-cliquez sur votre position
-  enemies:
-    - [3.5891028350278966,45.491286197997574]
-    - [3.588019736289834,45.515975273288184]
-    - [3.6127788326561507,45.497240656813894]
-    - [3.6318083843088247,45.49725362798065]
-    - [3.663120421178209,45.51831989564912]
-    - [3.694075467553683,45.51860817504424]
-    - [3.7282743304201134,45.54380236684891]
-    - [3.6190975823646476,45.542915891045745]
-    - [3.636248217769057,45.56781305524764]
-    - [3.644740890465124,45.53639115011499]
-    - [3.6992120343482786,45.546318900483904]
-    - [3.6764900475517597,45.553593565608566]
-  helpers:
-    - [3.576301842229193,45.519260260104765]
-    - [3.600610253817467,45.48481341036346]
-    - [3.613377110635374,45.53048865898132]
-    - [3.651153064963168,45.50359554095096]
-    - [3.682939951291738,45.51360147101689]
-    - [3.654087860996387,45.551191847563416]
-    - [3.7180748586842203,45.52810168682577]
-    - [3.7297718219987406,45.55675942421688]
-    - [3.7423176932567546,45.51605641047329]
 ###########################
 #### LEVELS DEFINITION ####
 ###########################
 levels:
+  - type: tutorial
+    name: "Tutoriel"
+    player: [3.5607160720497193,45.504232060218484]
+    target: [3.741964538569108,45.55022042474076]
+    hints:
+      0: À l'ouest de la ville de Lyon
+      6: Entre St-Étienne et Clermont-Ferrand
+      8: Au sud-ouest de la ville d'Ambert
+      10: Entre St-Amant-Roche-Savine et St-Germain-l'Herm
+      11: Au sud-ouest de Fournols
+      13: Au hameau de La Colombière, double-cliquez sur votre position
+    enemies:
+      - [3.5891028350278966,45.491286197997574]
+      - [3.588019736289834,45.515975273288184]
+      - [3.6127788326561507,45.497240656813894]
+      - [3.6318083843088247,45.49725362798065]
+      - [3.663120421178209,45.51831989564912]
+      - [3.694075467553683,45.51860817504424]
+      - [3.7282743304201134,45.54380236684891]
+      - [3.6190975823646476,45.542915891045745]
+      - [3.636248217769057,45.56781305524764]
+      - [3.644740890465124,45.53639115011499]
+      - [3.6992120343482786,45.546318900483904]
+      - [3.6764900475517597,45.553593565608566]
+    helpers:
+      - [3.576301842229193,45.519260260104765]
+      - [3.600610253817467,45.48481341036346]
+      - [3.613377110635374,45.53048865898132]
+      - [3.651153064963168,45.50359554095096]
+      - [3.682939951291738,45.51360147101689]
+      - [3.654087860996387,45.551191847563416]
+      - [3.7180748586842203,45.52810168682577]
+      - [3.7297718219987406,45.55675942421688]
+      - [3.7423176932567546,45.51605641047329]
   - type: experience
     name: "Niveau 1"
     index: "piaget"
@@ -211,10 +206,7 @@ levels:
   - type: tier
     name: "Niveau 2"
     content:
-      - start:
-          zoom: 5
-          center: [ 2.4330433787464445,46.76956073999986 ]
-        player: [ -3.1053235400638313,48.27263956517598 ]
+      - player: [ -3.1053235400638313,48.27263956517598 ]
         target: [ -2.9660401282860756,48.06515374496134 ]
         hints:
           0: Je pense que je suis à l'ouest de la ville de Rennes.
@@ -287,10 +279,7 @@ levels:
       - target: [ 1.2866479982915493,43.885279168322626 ]
       - target: [ 6.089149305028605,45.91959117838756 ]
       - target: [ 1.361450712000182,45.950810067261486 ]
-      - start:
-          zoom: 5
-          center: [ 2.4330433787464445,46.76956073999986 ]
-        player: [ -1.5217619972838459,49.42123384435775 ]
+      - player: [ -1.5217619972838459,49.42123384435775 ]
         target: [ -1.6178715125171268,49.64454227099347 ]
         hints:
           0: Au Nord de Rennes
