saving interactions, clics and phase 1 and 2 to server

--- a/server/configuration.yml
+++ b/server/configuration.yml
@@ -168,12 +168,12 @@ levels:
       - 3.631482150631996
       - 45.575270134996
     hints:
-      '0': Je suis à l'ouest de la ville de Lyon.
-      '5.69': Entre St-Étienne et Clermont-Ferrand.
-      '6.69': Tu chauffes ! Je suis au sud-ouest d'Ambert !
-      '8.70': Entre St-Amant-Roche-Savine et St-Germain-l'Herm.
-      '9.70': Tu approches ! Au sud-ouest de Fournols !
-      '11.70': Bravo, je suis dans le hameau de La Colombière ! Clique sur ma position pour continuer.
+      '0': 'Je suis à l''ouest de la ville de Lyon.'
+      '5.69': 'Entre St-Étienne et Clermont-Ferrand.'
+      '6.69': 'Tu chauffes ! Je suis au sud-ouest d''Ambert !'
+      '8.70': 'Entre St-Amant-Roche-Savine et St-Germain-l''Herm.'
+      '9.70': 'Tu approches ! Au sud-ouest de Fournols !'
+      '11.70': 'Bravo, je suis dans le hameau de La Colombière ! Clique sur ma position pour continuer.'
     enemies:
       - type: eagle
         coordinates:
@@ -212,11 +212,11 @@ levels:
       - player: [ -3.1053235400638313,48.27263956517598 ]
         target: [ -2.9660401282860756,48.06515374496134 ]
         hints:
-          0: Je pense que je suis à l'ouest de la ville de Rennes.
-          6: Je crois être entre Lorient et St-Brieuc.
-          8: Hmm... au nord de Pontivy ?
-          10: Ça me revient, je suis entre Gouarec et Corlay.
-          11: Ah oui, c'est ça ! À St-Igeaux !
+          0: 'Je pense que je suis à l''ouest de la ville de Rennes.'
+          6: 'Je crois être entre Lorient et St-Brieuc.'
+          8: 'Hmm... au nord de Pontivy ?'
+          10: 'Ça me revient, je suis entre Gouarec et Corlay.'
+          11: 'Ah oui, c''est ça ! À St-Igeaux !'
         enemies:
           - type: snake
             coordinates: [-3.180709285767183,48.22721521917229]
@@ -247,7 +247,35 @@ levels:
           - [-2.932125467956304,48.139081456362646]
           - [-3.2087120655625054,48.20443641871421]
           - [-3.01009985242774,48.20964171694654]
-      - target: [ 1.9150105563803137,48.02224855414998 ]
+      - player:
+          - 0.06708079359677299
+          - 49.51185154010349
+        target:
+          - 0.10441437608182014
+          - 49.48645611292656
+        hints: {}
+        enemies:
+          - type: snake
+            coordinates:
+              - 0.09787662131208208
+              - 49.54780448195223
+          - type: hunter
+            coordinates:
+              - 0.12914336545861715
+              - 49.52909536794138
+        helpers:
+          - - 0.08894326584140799
+            - 49.53515685117867
+          - - 0.08934932745418678
+            - 49.52435107411938
+          - - 0.15147675413453499
+            - 49.515652006335955
+          - - 0.1445737067262769
+            - 49.504841917873875
+          - - 0.11655545547745305
+            - 49.50985176807481
+          - - 0.17502832765126186
+            - 49.50721506876138
       - target: [ 4.742646559356173,45.9924037536202 ]
       - target: [ -0.38898848432943517,45.10183756639063 ]
   - type: experience
@@ -282,56 +310,7 @@ levels:
       - target: [ 1.2866479982915493,43.885279168322626 ]
       - target: [ 6.089149305028605,45.91959117838756 ]
       - target: [ 1.361450712000182,45.950810067261486 ]
-      - player: [ -1.5217619972838459,49.42123384435775 ]
-        target: [ -1.6178715125171268,49.64454227099347 ]
-        hints:
-          0: Au Nord de Rennes
-          7: Au sud de Cherbourg
-          9: Entre Cherbourg-en-Cotentin et Lessay
-          10: Au nord de St-Sauveur le Vicomte
-          11: Dans le village de Ste-Colombe
-        enemies:
-          - [-1.5962995724863411,49.59770396257331]
-          - [-1.6492258301283464,49.620577848469765]
-          - [-1.5757475056945813,49.635431513095874]
-          - [-1.6315608864769122,49.63571511787971]
-          - [-1.5739959417489602,49.5635417171812]
-          - [-1.66735428166063,49.55933395164491]
-          - [-1.6244827781362379,49.59134044315358]
-          - [-1.5943034960499878,49.52291249068318]
-          - [-1.6763074354000054,49.53775238950017]
-          - [-1.6838284190400439,49.51855423006732]
-          - [-1.6313740564569823,49.52082060690705]
-          - [-1.6413872138595051,49.47004255729322]
-          - [-1.626021587249309,49.4741104670295]
-          - [-1.5827786672248083,49.42688362085631]
-          - [-1.4935011239182197,49.45562085360561]
-          - [-1.549575413800516,49.49205765433281]
-          - [-1.488285184814413,49.50225097647408]
-          - [-1.4689505671391738,49.509226174861695]
-          - [-1.4979524936520328,49.51898978198184]
-        helpers:
-          - [-1.5424889143215943,49.419975913700256]
-          - [-1.5426772096997319,49.458911616652934]
-          - [-1.5608133626965695,49.46797241725518]
-          - [-1.567591996309525,49.43884015645001]
-          - [-1.5057406711645385,49.44448913727061]
-          - [-1.5960846821852956,49.4822827242462]
-          - [-1.5042332765884678,49.478028291666256]
-          - [-1.5574606417868533,49.51862377143022]
-          - [-1.6038514646661803,49.51101468400574]
-          - [-1.651278127290819,49.50181879059534]
-          - [-1.6395583404581469,49.442797132935105]
-          - [-1.6654395363802976,49.518306749755226]
-          - [-1.6170954156955257,49.55189961120284]
-          - [-1.6478598561312898,49.5653393402111]
-          - [-1.6620212652207684,49.6061788298084]
-          - [-1.5658213483025853,49.589087389562515]
-          - [-1.6195370379523322,49.61219106014636]
-          - [-1.599027410995156,49.6137731027806]
-          - [-1.6168512534698447,49.63338616536307]
-          - [-1.6423392955582643,49.646578527429426]
-          - [-1.6063771152243906,49.63881753504038]
+      - target: [ -1.6178715125171268,49.64454227099347 ]
   - type: experience
     name: "Niveau 5"
     index: "ptsot"
