added first tier of levels

--- a/server/configuration.yml
+++ b/server/configuration.yml
@@ -2,7 +2,6 @@
 #### INTERFACE PARAMETERS ####
 ##############################
 interface:
-  theme: theme-dark
   transition:
     page: 500
   languages:
@@ -11,9 +10,9 @@ interface:
       - en
     current: en
   map:
-    levels: [ -5.13280186540815, 41.36591212487376, 9.559580918100119, 51.08754085980848 ]
+    levels: [ -7, 42, 12, 52 ]
     animation:
-      minspeed: 300
+      minspeed: 500
       maxspeed: 1500
     start:
       centers:
@@ -158,6 +157,7 @@ consent:
 ###########################
 #### LEVELS DEFINITION ####
 ###########################
+# TUTORIAL
 levels:
   - type: tutorial
     name: "Tutoriel"
@@ -209,75 +209,345 @@ levels:
   - type: tier
     name: "Niveau 2"
     content:
-      - player: [ -3.1053235400638313,48.27263956517598 ]
-        target: [ -2.9660401282860756,48.06515374496134 ]
-        hints:
-          0: 'Je pense que je suis à l''ouest de la ville de Rennes.'
-          6: 'Je crois être entre Lorient et St-Brieuc.'
-          8: 'Hmm... au nord de Pontivy ?'
-          10: 'Ça me revient, je suis entre Gouarec et Corlay.'
-          11: 'Ah oui, c''est ça ! À St-Igeaux !'
-        enemies:
-          - type: snake
-            coordinates: [-3.180709285767183,48.22721521917229]
-          - type: eagle
-            coordinates: [-2.986731929810153,48.200448665578335]
-          - type: eagle
-            coordinates: [-3.0938057136846635,48.219495533891376]
-          - type: hunter
-            coordinates: [-3.015951492495701,48.17039484156545]
-          - type: snake
-            coordinates: [-3.1532805940582023,48.13466339677635]
-          - type: hunter
-            coordinates: [-3.070711471743748,48.123893276292826]
-          - type: snake
-            coordinates: [-2.9855245134307613,48.12999471231148]
-          - type: hunter
-            coordinates: [-3.00568882759332,48.25581780903966]
-          - type: eagle
-            coordinates: [-3.0681395126455033,48.17696967143539]
-        helpers:
-          - [-3.1268076134038996,48.19953332236447]
-          - [-3.147403814937377,48.21490323562907]
-          - [-3.1276953423665743,48.16411991213865]
-          - [-3.0504211956319827,48.23552701580077]
-          - [-3.0232128673849084,48.0725072092649]
-          - [-3.084452800933297,48.19445732193535]
-          - [-2.9924719141086507,48.08597533301749]
-          - [-2.932125467956304,48.139081456362646]
-          - [-3.2087120655625054,48.20443641871421]
-          - [-3.01009985242774,48.20964171694654]
       - player:
-          - 0.06708079359677299
-          - 49.51185154010349
+          - -4.552246587387344
+          - 48.170590608269464
         target:
-          - 0.10441437608182014
-          - 49.48645611292656
-        hints: {}
+          - -4.628571822404666
+          - 48.28028059639661
+        hints:
+          '0': Je suis à l'ouest de Rennes.
+          '4.83': Mais oui ! Au sud de Brest !
+          '6.83': Hmm, entre Brest en Quimper...
+          '8.50': Un peu au sud de Crozon.
+          '9.65': C'est ça ! Je suis au Cap de la Chèvre. Clique sur ma position pour continuer.
         enemies:
           - type: snake
             coordinates:
-              - 0.09787662131208208
-              - 49.54780448195223
-          - type: hunter
+              - -4.5385327997601905
+              - 48.24255209250762
+          - type: snake
             coordinates:
-              - 0.12914336545861715
-              - 49.52909536794138
+              - -4.5452265849780815
+              - 48.21995350201297
+          - type: snake
+            coordinates:
+              - -4.529610820342498
+              - 48.20331793095875
+          - type: snake
+            coordinates:
+              - -4.537600190133702
+              - 48.18505238280426
+          - type: snake
+            coordinates:
+              - -4.554882627111823
+              - 48.27423659237655
+          - type: snake
+            coordinates:
+              - -4.577608440539194
+              - 48.26469389564099
+          - type: snake
+            coordinates:
+              - -4.595825739333634
+              - 48.27248243021461
+          - type: snake
+            coordinates:
+              - -4.616241831664553
+              - 48.264488159495016
         helpers:
-          - - 0.08894326584140799
-            - 49.53515685117867
-          - - 0.08934932745418678
-            - 49.52435107411938
-          - - 0.15147675413453499
-            - 49.515652006335955
-          - - 0.1445737067262769
-            - 49.504841917873875
-          - - 0.11655545547745305
-            - 49.50985176807481
-          - - 0.17502832765126186
-            - 49.50721506876138
-      - target: [ 4.742646559356173,45.9924037536202 ]
-      - target: [ -0.38898848432943517,45.10183756639063 ]
+          - - -4.536583529962542
+            - 48.20990742051893
+          - - -4.519495270925631
+            - 48.2032343352123
+          - - -4.5279509336502315
+            - 48.22347513128008
+          - - -4.547561931352192
+            - 48.234972162688734
+          - - -4.527609605120631
+            - 48.24754105038852
+          - - -4.511000625678463
+            - 48.24433275205487
+          - - -4.5987286554193645
+            - 48.26165923271344
+          - - -4.542740754816236
+            - 48.27250006077526
+          - - -4.584396308548463
+            - 48.270184994747325
+          - - -4.566592261227811
+            - 48.278249516221905
+          - - -4.608711149880804
+            - 48.28046571686636
+      - player:
+          - 1.2786435595737657
+          - 49.31450774298335
+        target:
+          - 1.1414678955146655
+          - 49.182885176943785
+        hints:
+          '0': Je suis au nord-ouest de Paris
+          '4.65': Ah oui ! Aux alentours de Rouen !
+          '5.66': Et plus précisément au sud-est de Rouen.
+          '6.66': Ça me revient, entre Rouen et les Andelys !
+          '8.66': Au niveau de la confluence entre la Seine et l'Andelle.
+          '9.66': Dans le village de Flipou ! Clique sur ma position pour continuer.
+        enemies:
+          - type: snake
+            coordinates:
+              - 1.259348768579457
+              - 49.28446046797376
+          - type: snake
+            coordinates:
+              - 1.2930271328096694
+              - 49.27745438488043
+          - type: snake
+            coordinates:
+              - 1.2703848120226269
+              - 49.25511517302013
+          - type: snake
+            coordinates:
+              - 1.2059005823547864
+              - 49.30334719002491
+          - type: snake
+            coordinates:
+              - 1.2013983163813862
+              - 49.277091644747
+          - type: snake
+            coordinates:
+              - 1.209317827845382
+              - 49.25654198948342
+          - type: snake
+            coordinates:
+              - 1.2405968744463962
+              - 49.24733471639797
+          - type: snake
+            coordinates:
+              - 1.2120845674024565
+              - 49.226954612842945
+          - type: snake
+            coordinates:
+              - 1.1688637147093743
+              - 49.21526415670672
+          - type: snake
+            coordinates:
+              - 1.174874554489378
+              - 49.23688389635771
+          - type: snake
+            coordinates:
+              - 1.169277721964221
+              - 49.18637805571561
+          - type: snake
+            coordinates:
+              - 1.2077184476123932
+              - 49.198197695954036
+          - type: snake
+            coordinates:
+              - 1.111532467144741
+              - 49.19480563877039
+          - type: snake
+            coordinates:
+              - 1.148438374138351
+              - 49.197804225808255
+        helpers:
+          - - 1.243705893537367
+            - 49.29542632909451
+          - - 1.2413687998957528
+            - 49.231800439782546
+          - - 1.2150072548886897
+            - 49.24717634746045
+          - - 1.2084677978582476
+            - 49.26912019558131
+          - - 1.2594800074032264
+            - 49.274528067456544
+          - - 1.1820664710526216
+            - 49.229138969681145
+          - - 1.1352693183945348
+            - 49.20273673930805
+          - - 1.1876624231960022
+            - 49.1740649555872
+          - - 1.172193750178451
+            - 49.19475666913027
+      - player:
+          - 1.8648405012138198
+          - 45.80087018718521
+        target:
+          - 1.8806563742477067
+          - 45.79786557158289
+        hints:
+          '0': Je suis entre Bordeaux et Lyon.
+          '4.80': Ah oui, entre Limoges et Clermont-Ferrand !
+          '6.81': Entre Limoges et Aubusson.
+          '7.81': Dans la partie nord-ouest du PNR de Millevaches en Limousin.
+          '8.81': À l'ouest de Gentioux-Pigerolles.
+          '9.81': Ah c'est ça, le lac de Vassivière est autour de moi !
+          '10.82': Sur l'île où il y a Vassivière.
+          '11.82': Oui enfin ! Je suis dans Vassivière. Clique sur ma position pour continuer.
+        enemies:
+          - type: snake
+            coordinates:
+              - 1.9080177204646986
+              - 45.81561888224624
+          - type: snake
+            coordinates:
+              - 1.9214254550349494
+              - 45.7917516643997
+          - type: snake
+            coordinates:
+              - 1.8959177891949537
+              - 45.7886899886808
+          - type: snake
+            coordinates:
+              - 1.8796210751798412
+              - 45.83086288736021
+          - type: snake
+            coordinates:
+              - 1.9391866757227945
+              - 45.77716169120552
+          - type: snake
+            coordinates:
+              - 1.8754807028944924
+              - 45.807104629623524
+          - type: snake
+            coordinates:
+              - 1.8717660992497542
+              - 45.78650937612966
+          - type: snake
+            coordinates:
+              - 1.857008931897525
+              - 45.82184063550645
+          - type: snake
+            coordinates:
+              - 1.8433850052923333
+              - 45.805497311769045
+          - type: snake
+            coordinates:
+              - 1.8484845675185966
+              - 45.78518878919607
+          - type: snake
+            coordinates:
+              - 1.8200487467670712
+              - 45.809774936265654
+          - type: snake
+            coordinates:
+              - 1.8200474714895165
+              - 45.79061599142182
+          - type: snake
+            coordinates:
+              - 1.8296928529386207
+              - 45.77200410713431
+          - type: snake
+            coordinates:
+              - 1.93223138205434
+              - 45.80448777523773
+          - type: snake
+            coordinates:
+              - 1.9207595358716958
+              - 45.834370835473806
+        helpers:
+          - - 1.8818876210665394
+            - 45.813272236725794
+          - - 1.8598629250612646
+            - 45.833678518332846
+          - - 1.8612876105228793
+            - 45.808807829740374
+          - - 1.8702061229201092
+            - 45.77537713326953
+          - - 1.8375126034677578
+            - 45.78410260147564
+          - - 1.8344085768991363
+            - 45.82648245357791
+          - - 1.8996126938018278
+            - 45.83036629534894
+          - - 1.9186419610377357
+            - 45.80268145660338
+          - - 1.9367829735727184
+            - 45.786167622166175
+      - player:
+          - 6.885330313870753
+          - 43.75231518761393
+        target:
+          - 6.791254902457638
+          - 43.652729740693644
+        hints:
+          '0': Je suis dans les environs de Monaco.
+          '5.53': Plutôt du côté de Nice-Cannes.
+          '6.53': Ça me revient, je suis au nord de Grasse !
+          '8.54': Au nord du Bar-sur-Loup.
+          '9.54': Ah oui ! Vers Caussols, sur le plateau de Calern.
+          '11.54': Je suis sur le sommet de Calern, Clique sur ma position pour continuer.
+        enemies:
+          - type: snake
+            coordinates:
+              - 6.87027574569197
+              - 43.67240241523399
+          - type: snake
+            coordinates:
+              - 6.8481449276698925
+              - 43.698523616810235
+          - type: snake
+            coordinates:
+              - 6.889055276186582
+              - 43.70640166663935
+          - type: snake
+            coordinates:
+              - 6.84183858243631
+              - 43.67681733057228
+          - type: snake
+            coordinates:
+              - 6.870739568713191
+              - 43.72736536716934
+          - type: snake
+            coordinates:
+              - 6.844320908049497
+              - 43.649037201674446
+          - type: snake
+            coordinates:
+              - 6.8071134679919965
+              - 43.675611242631305
+          - type: snake
+            coordinates:
+              - 6.902592655734168
+              - 43.733224202293286
+          - type: snake
+            coordinates:
+              - 6.815938743799251
+              - 43.650390785033295
+          - type: snake
+            coordinates:
+              - 6.88529080013015
+              - 43.7427942730626
+          - type: snake
+            coordinates:
+              - 6.873942501070303
+              - 43.75842254673245
+          - type: snake
+            coordinates:
+              - 6.771649665810827
+              - 43.663741282650165
+          - type: snake
+            coordinates:
+              - 6.818639205375405
+              - 43.70331129623162
+        helpers:
+          - - 6.890411406757636
+            - 43.72431765597173
+          - - 6.869307141977515
+            - 43.750917298113336
+          - - 6.860626895271281
+            - 43.71956777235968
+          - - 6.878236251019615
+            - 43.686482987575204
+          - - 6.854600949574319
+            - 43.67574143790449
+          - - 6.827067554003065
+            - 43.687679070433035
+          - - 6.8218623091075585
+            - 43.654740495911994
+          - - 6.814474913273301
+            - 43.66491633867176
+          - - 6.78161319488396
+            - 43.670796094864045
+          - - 6.909234403895681
+            - 43.69845636957169
   - type: experience
     name: "Niveau 3"
     index: "sbsod"
